--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -10,22 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout code
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Pull latest changes from main branch and prepare SSH key
-      - name: Pull latest changes from main branch
+      - name: Setup SSH
         run: |
-          git fetch origin main
-          git merge --no-ff origin/main
           mkdir -p ~/.ssh
           echo "${{ secrets.CPANEL_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          echo "Host *" >> ~/.ssh/config
-          echo "  StrictHostKeyChecking no" >> ~/.ssh/config
+          ssh-keyscan skillscraftacademy.com >> ~/.ssh/known_hosts
 
-      # Sync code to cPanel using rsync
-      - name: Sync code to cPanel
+      - name: Upload code using SCP
         run: |
-          rsync -avz --exclude '.git' --delete ./ skillscr@skillscraftacademy.com:/home/skillscr/lms
+          scp -r * skillscr@skillscraftacademy.com:/home/skillscr/lms
