--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,3 +1,28 @@
+# name: Deploy to cPanel
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+
+#       - name: Setup SSH
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "${{ secrets.CPANEL_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+#           chmod 600 ~/.ssh/id_rsa
+#           ssh-keyscan skillscraftacademy.com >> ~/.ssh/known_hosts
+
+#       - name: Upload code using SCP
+#         run: |
+#           scp -r * skillscr@skillscraftacademy.com:/home/skillscr/lms
 name: Deploy to cPanel
 
 on:
@@ -20,6 +45,6 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan skillscraftacademy.com >> ~/.ssh/known_hosts
 
-      - name: Upload code using SCP
+      - name: Upload code using Rsync
         run: |
-          scp -r * skillscr@skillscraftacademy.com:/home/skillscr/lms
+          rsync -avz --exclude='.git' * skillscr@skillscraftacademy.com:/home/skillscr/lms
