--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,28 +23,42 @@
 #       - name: Upload code using SCP
 #         run: |
 #           scp -r * skillscr@skillscraftacademy.com:/home/skillscr/lms
-name: Deploy to cPanel
+name: Deploy website on push
 
 on:
   push:
     branches:
-      - main
+      - main  # main ব্রাঞ্চে কোড পুশ করার পরে এই pipeline রান হবে।
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.CPANEL_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan skillscraftacademy.com >> ~/.ssh/known_hosts
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.12.11  # Django প্রজেক্টের জন্য Python version সেট করুন।
 
-      - name: Upload code using Rsync
+      - name: Install dependencies
         run: |
-          rsync -avz --exclude='.git' * skillscr@skillscraftacademy.com:/home/skillscr/lms
+          pip install -r requirements.txt  # Django প্রজেক্টের ডিপেনডেন্সি ইনস্টল করা হবে।
+
+      - name: Collect static files
+        run: |
+          python manage.py collectstatic --noinput  # Static ফাইল একত্রিত করা হবে।
+
+      - name: Django migrations
+        run: |
+          python manage.py makemigrations  # মাইগ্রেশন ফাইল তৈরি করা হবে।
+          python manage.py migrate  # মাইগ্রেশন কমান্ড রান হবে।
+
+      - name: Deploy to FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        with:
+          server: ftp.skillscraftacademy.com  # আপনার FTP সার্ভারের ঠিকানা দিন।
+          username: ${{ secrets.ftp_username }}  # GitHub Secrets থেকে FTP username ব্যবহার হবে।
+          password: ${{ secrets.ftp_password }}  # GitHub Secrets থেকে FTP password ব্যবহার হবে।
