--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,23 +43,30 @@ jobs:
         with:
           python-version: 3.12.11  # Django প্রজেক্টের জন্য Python version সেট করুন।
 
+      - name: Cache Python dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt  # Django প্রজেক্টের ডিপেনডেন্সি ইনস্টল করা হবে।
 
-      
       - name: Django migrations
         run: |
           python manage.py makemigrations  # মাইগ্রেশন ফাইল তৈরি করা হবে।
           python manage.py migrate  # মাইগ্রেশন কমান্ড রান হবে।
+
+      - name: Collect static files
+        run: |
+          python manage.py collectstatic --noinput --clear  # Static ফাইল একত্রিত করা হবে।
 
       - name: Deploy to FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ftp.skillscraftacademy.com  # আপনার FTP সার্ভারের ঠিকানা দিন।
           username: ${{ secrets.ftp_username }}  # GitHub Secrets থেকে FTP username ব্যবহার হবে।
-          password: ${{ secrets.ftp_password }}  # GitHub Secrets থেকে FTP password ব্যবহার হবে।
-      
-      - name: Collect static files
-        run: |
-          python manage.py collectstatic --noinput  # Static ফাইল একত্রিত করা হবে।
+          password: ${{ secrets.ftp_password }}  # GitHub Secrets থেকে FTP password ব্যবহার হবে。
