--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -41,13 +41,13 @@ jobs:
 
       # Step 2: Set up Python environment with version 3.12.11
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v2
         with:
           python-version: 3.12.11  # Django প্রজেক্টের জন্য Python version সেট করুন।
 
       # Step 3: Cache Python dependencies to speed up future builds
       - name: Cache Python dependencies
-        uses: actions/cache@v2
+        uses: actions/cache@v3  # actions/cache version v3 (Updated from v2 to v3)
         with:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
