--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,6 +74,7 @@ jobs:
           username: ${{ secrets.ftp_username }}  # GitHub Secrets থেকে FTP username ব্যবহার হবে।
           password: ${{ secrets.ftp_password }}  # GitHub Secrets থেকে FTP password ব্যবহার হবে।
           passive: true  # Passive Mode Enable
+          port: 22
       # Step 6: Collect static files (clear old ones and collect new ones)
       - name: Collect static files
         run: |
